<resources>
    <string name="app_name">Notes</string>
    <string name="title_text">Ideas and Random Thoughts</string>
    <string name="note_text">What\'s the best idea that you had today?</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email:</string>
    <string name="password_hint">Password:</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="title_hint">Note Title</string>
    <string name="postBodyHint">Start writing</string>
    <string name="postButtonText">Save</string>
    <string name="take_photo">Get Photo</string>
    <string name="camera">Camera</string>
    <string name="image">Get image</string>
</resources>
